--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,30 @@
 * {
-  margin: 0;
-  border: 0;
   text-decoration: none;
+}
+ul {
+  padding: 0px;
+  margin: 0px;
+}
+.list {
   list-style: none;
 }
+.list p {
+  margin: 0px;
+  padding: 0px;
+}
+/* Шапка сайта */
+.container {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.section {
+  display: flex;
+  padding-bottom: 94px;
+}
+
+/******************************************/
+
 body {
   background-color: var(--main-background-color);
   color: var(--primary-text-color);
@@ -25,11 +46,6 @@ body {
 }
 
 /* Шапка сайта */
-.header-container {
-  width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -41,6 +57,18 @@ body {
 }
 .logo-web {
   color: var(--accent-color);
+}
+.site-nav {
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+}
+.site-nav .list:not(:last-child) {
+  margin-right: 50px;
+}
+.site-nav a {
+  display: block;
+  padding: 32px 0px;
 }
 .site-nav a {
   font-weight: 500;
@@ -57,7 +85,10 @@ body {
 .site-nav .current {
   color: var(--accent-color);
 }
-
+.mail-tel {
+  margin: 0px;
+  padding: 0px;
+}
 .mail-tel a {
   color: var(--secondary-text-color);
 }
@@ -70,13 +101,13 @@ body {
 /* Акцентные кнопки */
 
 .button {
+  border: solid transparent;
   color: var(--third-text-color);
-
+  padding: 10px 32px;
+  min-width: 250px;
   border-radius: 4px;
   background: var(--primary-button-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  width: 200px;
-  height: 50px;
 }
 
 .button:hover,
@@ -87,6 +118,9 @@ body {
 /* СТИЛИ ФУТЕРА */
 
 /* Адрес и лого */
+.logo-container {
+  margin-bottom: 20px;
+}
 .footer-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
@@ -95,7 +129,7 @@ body {
   color: var(--primary-text-color);
   letter-spacing: 0.03em;
 }
-.footer-container {
+.footer {
   background-color: var(--footer-background-color);
 }
 
@@ -116,6 +150,13 @@ body {
 
 .footer-mail-tel {
   color: var(--footer-contacts-color);
+}
+.socials-container {
+  margin-top: 72px;
+  margin-bottom: 100px;
+  margin-left: 69px;
+
+  margin-right: 94px;
 }
 .bold-text {
   color: var(--third-text-color);
