--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -18,7 +18,17 @@
 
 /* Основной контент */
 
+.radio-buttons {
+  display: flex;
+}
+.radio-buttons .list:not(:last-child) {
+  margin-right: 8px;
+}
+
 .radio-buttons a {
+  outline: solid 1px;
+  display: block;
+  padding: 6px 0px;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
