--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,7 @@
 * {
   text-decoration: none;
 }
-ul {
-  padding: 0px;
-  margin: 0px;
-}
+
 .list {
   list-style: none;
 }
@@ -21,7 +18,7 @@ ul {
   margin-right: auto;
 }
 .section {
-  padding-bottom: 94px;
+  padding: 94px 0px;
 }
 
 /******************************************/
@@ -64,9 +61,17 @@ body {
 .logo-web {
   color: var(--accent-color);
 }
+
+/* Навигация */
+
+.site-nav {
+  padding: 0px;
+  margin: 0px;
+}
 .site-nav {
   display: flex;
   margin-right: auto;
+  margin-left: 85px;
 }
 .site-nav .list:not(:last-child) {
   margin-right: 50px;
@@ -90,6 +95,9 @@ body {
 .site-nav .current {
   color: var(--accent-color);
 }
+
+/* Почта и телефон */
+
 .mail-tel .list:not(:last-child) {
   margin-right: 30px;
 }
@@ -127,9 +135,7 @@ body {
 /* СТИЛИ ФУТЕРА */
 
 /* Адрес и лого */
-.logo-container {
-  margin-bottom: 20px;
-}
+
 .footer-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
