--- a/css/studio.css
+++ b/css/studio.css
@@ -2,6 +2,7 @@
 .section-hero {
   display: flex;
   padding: 200px 452px;
+  margin-bottom: 94px;
   background-color: #ee22ee;
 
   text-align: center;
@@ -22,16 +23,30 @@
   margin-top: 0px;
   margin-bottom: 50px;
   padding: 0px;
+  text-align: center;
+
+  font-weight: bold;
+  font-size: 36px;
 }
 
 /* Особенности */
 
 .features {
+  display: flex;
+  flex-wrap: wrap;
+
   margin: 0px;
   padding: 0px;
 }
+.features .list {
+  width: 270px;
+  margin-right: 30px;
+}
+.features .list:nth-child(4n) {
+  margin-right: 0px;
+}
 .features-title {
-  margin-top: 0px;
+  margin: 0px;
   margin-bottom: 10px;
   padding: 0px;
   background-color: #ee22ee;
@@ -51,8 +66,18 @@
 /* Чем мы занимаемся */
 .work-examples {
   display: flex;
-}
+  flex-wrap: wrap;
 
+  margin: 0px;
+  padding: 0px;
+}
+.work-examples .list {
+  width: 370px;
+  margin-right: 30px;
+}
+.work-examples .list:nth-child(3n) {
+  margin-right: 0px;
+}
 .work-text {
   color: var(--third-text-color);
 
@@ -64,6 +89,17 @@
 /* Наша команда */
 .team {
   display: flex;
+  flex-wrap: wrap;
+
+  margin: 0px;
+  padding: 0px;
+}
+.team .list {
+  width: 270px;
+  margin-right: 30px;
+}
+.team .list:nth-child(4n) {
+  margin-right: 0px;
 }
 .names {
   font-size: 16px;
@@ -75,7 +111,27 @@
   font-size: 16px;
   color: var(--secondary-text-color);
 }
+.socials {
+  display: flex;
+}
 
 /* Фото команды */
 
 /* Постоянные клиенты */
+.clients {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin: 0px;
+  padding: 0px;
+}
+.clients .list {
+  width: 170px;
+  margin-right: 30px;
+
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+}
+.clients .list:nth-child(6n) {
+  margin-right: 0px;
+}
