--- a/css/main.css
+++ b/css/main.css
@@ -14,18 +14,17 @@
   --footer-contacts-color: rgba(255, 255, 255, 0.6);
   --primary-button-color: #2196f3;
   --border-color: #afb1b8;
+  --secondary-background-color: #f5f4fa;
+  --clients-hover-color: #2196f3;
 }
 
 .list {
   list-style: none;
 }
-.list p {
-  margin: 0px;
-  padding: 0px;
-}
+
 /* Шапка сайта */
 .container {
-  max-width: 1200px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -33,6 +32,9 @@
 }
 .section {
   margin-bottom: 94px;
+}
+.section:nth-child(3) {
+  background-color: var(--secondary-background-color);
 }
 
 /******************************************/
@@ -121,7 +123,7 @@ body {
   border: solid transparent;
   color: var(--third-text-color);
   padding: 10px 32px;
-  min-width: 250px;
+  min-width: 200px;
   border-radius: 4px;
   background: var(--primary-button-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -129,26 +131,30 @@ body {
 
 .button:hover,
 .button:focus {
+  cursor: pointer;
   background: var(--hover-color);
 }
 
 /* СТИЛИ ФУТЕРА */
 
 /* Адрес и лого */
-footer {
-  display: flex;
+.footer {
+  background-color: var(--footer-background-color);
+}
+.logo-container {
+  display: inline-block;
+  margin-right: 69px;
 }
 
 .footer-logo {
+  display: inline-block;
+
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   font-size: 26px;
   line-height: 31px;
   color: var(--primary-text-color);
   letter-spacing: 0.03em;
-}
-.footer {
-  background-color: var(--footer-background-color);
 }
 
 .address-info {
@@ -170,7 +176,58 @@ footer {
   color: var(--footer-contacts-color);
 }
 
+.footer-flexbox {
+  display: flex;
+}
+.footer-container {
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  align-items: center;
+}
+
+.footer-flexbox:not(:last-child) {
+  width: 285px;
+  margin-right: 30px;
+}
+.footer-flexbox .asign {
+  width: 570px;
+}
+
+.address {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.footer-mail-tel {
+  display: inline-block;
+  color: var(--footer-contacts-color);
+  margin-top: 9px;
+}
+
+.footer-logo {
+  margin-bottom: 20px;
+
+  color: var(--wight-color);
+}
+
+.footer .link {
+  color: var(--wight-color);
+}
+
 .bold-text {
+  display: flex;
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: var(--third-text-color);
   text-transform: uppercase;
 }
