--- a/css/studio.css
+++ b/css/studio.css
@@ -18,11 +18,16 @@
 /* Герой */
 .section-hero {
   display: flex;
-  margin-bottom: 94px;
-  padding: 200px 452px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   background-color: #ee22ee;
 
   text-align: center;
+}
+.hero-container {
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-text {
   margin-top: 0px;
@@ -55,6 +60,9 @@
 
   margin: 0px;
   padding: 0px;
+}
+.features {
+  margin-bottom: 94px;
 }
 
 .features .pic {
@@ -93,6 +101,9 @@
 }
 
 /* Чем мы занимаемся */
+.work-pic {
+  display: block;
+}
 .work-examples {
   display: flex;
   flex-wrap: wrap;
@@ -122,9 +133,8 @@
 }
 
 /* Наша команда */
-.section-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+.photo {
+  display: block;
 }
 
 .team {
